Add Gilroy font

--- a/src/components/front-hero/index.sass
+++ b/src/components/front-hero/index.sass
@@ -21,6 +21,7 @@
       > .title
         color: white
         font-size: 4rem
+        letter-spacing: .1rem
         line-height: 6rem
         max-width: 82rem
 
