--- a/src/fonts.sass
+++ b/src/fonts.sass
@@ -1,1 +1,12 @@
 // TODO: Fonts here
+@font-face
+  font-family: 'Gilroy-Medium'
+  src: url('./fonts/35DEB6_0_0.woff2') format('woff2'), url('./fonts/35DEB6_0_0.woff') format('woff')
+
+@font-face
+  font-family: 'Gilroy-Light'
+  src: url('./fonts/35DEB6_1_0.woff2') format('woff2'), url('./fonts/35DEB6_1_0.woff') format('woff')
+
+@font-face
+  font-family: 'Gilroy-ExtraBold'
+  src: url('./fonts/35DEB6_2_0.woff2') format('woff2'), url('./fonts/35DEB6_2_0.woff') format('woff')
