--- a/src/components/nav-menu/index.sass
+++ b/src/components/nav-menu/index.sass
@@ -34,7 +34,7 @@
     left: 0
     right: 0
     bottom: 0
-    background: rgba(#111722, 0.95)
+    background: rgba(#111722, 0.97)
     z-index: 10
     flex-direction: column
     align-items: center
@@ -46,9 +46,10 @@
 
     > li
       font-size: 3rem
-      margin: 1em 0
+      font-family: 'Gilroy-ExtraBold', sans-serif
+      margin: .8em 0
       transition: transform .2s ease, opacity .2s ease
-      transform: translateX(-5rem)
+      transform: translateX(-8rem)
       opacity: 0
 
       @for $i from 1 through 4
