Update font weights

--- a/src/components/nav-menu/index.sass
+++ b/src/components/nav-menu/index.sass
@@ -46,7 +46,7 @@
 
     > li
       font-size: 3rem
-      font-family: 'Gilroy-ExtraBold', sans-serif
+      font-weight: bold
       margin: .8em 0
       transition: transform .2s ease, opacity .2s ease
       transform: translateX(-8rem)
