--- a/src/fonts.sass
+++ b/src/fonts.sass
@@ -1,12 +1,14 @@
-// TODO: Fonts here
 @font-face
-  font-family: 'Gilroy-Medium'
+  font-family: 'Gilroy' // Medium
+  font-weight: normal
   src: url('./fonts/35DEB6_0_0.woff2') format('woff2'), url('./fonts/35DEB6_0_0.woff') format('woff')
 
 @font-face
-  font-family: 'Gilroy-Light'
+  font-family: 'Gilroy' // Light
+  font-weight: lighter
   src: url('./fonts/35DEB6_1_0.woff2') format('woff2'), url('./fonts/35DEB6_1_0.woff') format('woff')
 
 @font-face
-  font-family: 'Gilroy-ExtraBold'
+  font-family: 'Gilroy' // Extra Bold
+  font-weight: bold
   src: url('./fonts/35DEB6_2_0.woff2') format('woff2'), url('./fonts/35DEB6_2_0.woff') format('woff')
