--- a/src/index.sass
+++ b/src/index.sass
@@ -10,7 +10,7 @@ html, body
 
 html
   font-size: 62.5%
-  font-family: 'Gilroy-Medium', sans-serif
+  font-family: 'Gilroy', sans-serif
   background: $color-dark-blue
 
 body
@@ -22,10 +22,6 @@ body
 
   @media screen and (min-width: #{375px + 1px})
     background-image: url('./images/hills.jpg')
-
-h1, h2, h3
-  font-family: 'Gilroy-ExtraBold', sans-serif
-  font-weight: normal
 
 @import './fonts'
 @import './components/front-hero/index.sass'
