--- a/src/index.pug
+++ b/src/index.pug
@@ -7,5 +7,6 @@ link(rel='stylesheet' href='./index.sass')
 meta(name='viewport' content='width=device-width, initial-scale=1')
 
 +front-hero
++footer-block
 
 script(src='./index.js' async)
