--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,4 @@
-@import './colors'
+@import './settings'
 
 *
   margin: 0
@@ -11,18 +11,28 @@ html, body
 html
   font-size: 62.5%
   font-family: 'Gilroy', sans-serif
-  background: $color-dark-blue
+  background: $color-darker-blue
 
 body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
-  background: $color-dark-blue url('./images/hills@0,55x.jpg') top no-repeat
+  background: $color-darker-blue url('./images/hills@0,55x.jpg') top no-repeat
   background-size: cover
 
   @media screen and (min-width: #{375px + 1px})
     background-image: url('./images/hills.jpg')
 
+a
+  transition: opacity .2s ease
+
+  &:hover
+    opacity: 0.7
+
+    @media (-moz-touch-enabled:1), (pointer:coarse)
+      opacity: 1
+
 @import './fonts'
 @import './components/front-hero/index.sass'
 @import './components/nav-menu/index.sass'
+@import './components/footer-block/index.sass'
