--- a/src/components/front-hero/index.sass
+++ b/src/components/front-hero/index.sass
@@ -58,7 +58,7 @@
       padding: 3rem
 
       > .content
-        margin-top: 10rem
+        margin: 10rem 0
         padding: 0 2rem
 
         > .title
