--- a/src/components/front-hero/front-hero.sass
+++ b/src/components/front-hero/front-hero.sass
@@ -1,5 +1,6 @@
 .front-hero
   height: 100%
+  margin-bottom: 10rem
 
   > .inner
     margin: 0 auto
@@ -58,7 +59,7 @@
       padding: 3rem
 
       > .content
-        margin: 10rem 0
+        margin: 10rem 0 0
         padding: 0 2rem
 
         > .title
