--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -1,2 +1,5 @@
-include front-hero/index.pug
-include footer-block/index.pug
+include astronaut-card/astronaut-card.pug
+include footer-block/footer-block.pug
+include front-hero/front-hero.pug
+include nav-menu/nav-menu.pug
+include team-block/team-block.pug
