--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,7 @@ link(rel='stylesheet' href='./index.sass')
 meta(name='viewport' content='width=device-width, initial-scale=1')
 
 +front-hero
++team-block
 +footer-block
 
 script(src='./index.js' async)
