Some nav menu styling

--- a/src/components/front-hero/front-hero.sass
+++ b/src/components/front-hero/front-hero.sass
@@ -1,6 +1,6 @@
 .front-hero
   height: 100%
-  margin-bottom: 10rem
+  margin-bottom: 5rem
 
   > .inner
     margin: 0 auto
@@ -38,6 +38,7 @@
             background: currentColor
             right: 100%
             top: 50%
+            margin-top: -.1rem
             margin-right: 3rem
             position: absolute
 
