--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -1,6 +1,6 @@
 .team-block
   max-width: $max-width
-  padding: 0 3rem
+  padding: 5rem 3rem 0
   margin: 0 auto 10rem
 
   > .heading
@@ -83,7 +83,8 @@
           grid-row: 16 / span 12
 
   @media screen and (max-width: $small-grid)
-    padding: 0
+    padding-left: 0
+    padding-right: 0
 
     > .heading, > .subheading
       padding: 0 3rem
