--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -17,7 +17,7 @@
 
   > .grid
     display: grid
-    // grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(3, 1fr)
     grid-auto-rows: 1rem
     grid-column-gap: 2rem
     grid-row-gap: 2rem
