Adjust header font sizes

--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -85,9 +85,17 @@
   @media screen and (max-width: $small-grid)
     padding-left: 0
     padding-right: 0
+    margin-bottom: 5rem
 
     > .heading, > .subheading
       padding: 0 3rem
+
+    > .heading
+      font-size: 1.8rem
+      margin-bottom: 2rem
+
+    > .subheading
+      display: none
 
     > .grid
       grid-auto-rows: 0.5rem
