--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -9,16 +9,17 @@
   display: flex
   flex-direction: column
   justify-content: flex-end
+  overflow: hidden
 
   &:before
     content: ''
     background: #0b0c0e
     z-index: 2
     position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
+    top: -1rem
+    left: -1rem
+    right: -1rem
+    bottom: -1rem
     opacity: .7
     transition: opacity .2s ease
 
@@ -62,8 +63,8 @@
     animation: from-transform .5s ease
     box-shadow: 0 0.5rem 2rem rgba(black, 0.2)
 
-    &:before
-      opacity: .6
+    // &:before
+    //   opacity: .6
 
     > .info
       opacity: 1
