Remove 3d drop shadow

--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -61,7 +61,7 @@
   .no-touchevents &:hover
     z-index: 10
     animation: from-transform .5s ease
-    box-shadow: 0 0.5rem 2rem rgba(black, 0.2)
+    // box-shadow: 0 0.5rem 2rem rgba(black, 0.2)
 
     // &:before
     //   opacity: .6
