Make very subtle shine effect on hover

--- a/src/components/astronaut-card/astronaut-card.pug
+++ b/src/components/astronaut-card/astronaut-card.pug
@@ -1,6 +1,8 @@
 mixin astronaut-card(name, desc, phone)
   article.astronaut-card
-    // Send image as block because of bug: https://github.com/Ty3uK/parcel-plugin-pug/issues/1
+    .shine
+
+    //- Send image as block because of bug: https://github.com/Ty3uK/parcel-plugin-pug/issues/1
     block
 
     h3.name= name
