--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -10,6 +10,7 @@
   flex-direction: column
   justify-content: flex-end
   overflow: hidden
+  transition: box-shadow .5s ease
 
   &:before
     content: ''
@@ -22,6 +23,15 @@
     bottom: -1rem
     opacity: .7
     transition: opacity .2s ease
+
+  > .shine
+    content: ''
+    z-index: 3
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
 
   > img
     position: absolute
@@ -61,7 +71,7 @@
   .no-touchevents &:hover
     z-index: 10
     animation: from-transform .5s ease
-    // box-shadow: 0 0.5rem 2rem rgba(black, 0.2)
+    box-shadow: 0 0.5rem 10rem rgba(black, 0.2)
 
     // &:before
     //   opacity: .6
