--- a/src/components/astronaut-card/astronaut-card.pug
+++ b/src/components/astronaut-card/astronaut-card.pug
@@ -1,5 +1,5 @@
 mixin astronaut-card(name, desc, phone)
-  article.astronaut-card
+  article.astronaut-card(tabindex='1')
     .shine
 
     //- Send image as block because of bug: https://github.com/Ty3uK/parcel-plugin-pug/issues/1
