--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ include components/index.pug
 doctype html
 title Future Memories
 link(rel='icon' href='./favicon.ico')
-link(rel='stylesheet' href='./index.sass')
+link(rel='stylesheet' href='./index.sass' inline)
 meta(name='viewport' content='width=device-width, initial-scale=1')
 
 +front-hero
