--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -10,7 +10,7 @@ mixin team-block
           'Co-founder and COO. Full-stack developer and tech lead with over 12 years of experience.',
           '+46 (0)735 201950'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Andreas Kaltenbach')
 
       a.item
         +astronaut-card(
@@ -18,7 +18,7 @@ mixin team-block
           'Co-founder and CEO. Over 17 years as product manager and designer across five industries.',
           '+46 (0)760 338822'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='P-A Gustafsson')
 
       a.item
         +astronaut-card(
@@ -26,7 +26,7 @@ mixin team-block
           'Partner and CTO. 20 years of creating digital experiences, mostly iOS nowadays.',
           '+46 (0)723 411322'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Mikael Hellqvist')
 
       a.item
         +astronaut-card(
@@ -34,7 +34,7 @@ mixin team-block
           'Partner and Lead Web/Unity developer. Experienced frontend developer with the mindset of a technical artist.',
           '+46 (0)732 628555'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Viktor Hesselbom')
 
       a.item
         +astronaut-card(
@@ -42,7 +42,7 @@ mixin team-block
           'Mobile developer with extensive experience in Android and iOS. Android is his platform of choice.',
           '+46 (0)705 905595'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Mattias Lundell')
 
       a.item
         +astronaut-card(
@@ -50,7 +50,7 @@ mixin team-block
           'Mobile Developer in his mid-twenties with some years into iOS, Android and React Native.',
           '+46 (0)722 536161'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Oskar Jönsson')
 
       a.item
         +astronaut-card(
@@ -58,7 +58,7 @@ mixin team-block
           'Lead Backend Developer who has been building cloud-based services and platforms for more than six years.',
           '+46 (0)763 490500'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Martin Egri')
 
       a.item
         +astronaut-card(
@@ -66,7 +66,7 @@ mixin team-block
           'Digital Designer in pursuit of creating engaging digital experiences, always keeping the user in mind.',
           '+46 (0)707 959011'
         )
-          img(src='./images/test-person.jpg')
+          img(src='./images/test-person.jpg' alt='Pontus Börjesson')
 
       a.item.-promotion
         span.text Come and work with us!
