--- a/src/fonts.sass
+++ b/src/fonts.sass
@@ -1,11 +1,11 @@
 @font-face
-  font-family: 'Gilroy' // Medium
-  font-weight: normal
+  font-family: 'Gilroy' // Light
+  font-weight: 300
   src: url('./fonts/35DEB6_1_0.woff2') format('woff2'), url('./fonts/35DEB6_1_0.woff') format('woff')
 
 @font-face
-  font-family: 'Gilroy' // Light
-  font-weight: lighter
+  font-family: 'Gilroy' // Medium
+  font-weight: normal
   src: url('./fonts/35DEB6_0_0.woff2') format('woff2'), url('./fonts/35DEB6_0_0.woff') format('woff')
 
 @font-face
