--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -12,18 +12,6 @@
   overflow: hidden
   transition: box-shadow .5s ease
 
-  &:before
-    content: ''
-    background: #0b0c0e
-    z-index: 2
-    position: absolute
-    top: -1rem
-    left: -1rem
-    right: -1rem
-    bottom: -1rem
-    opacity: .7
-    transition: opacity .2s ease
-
   > .shine
     content: ''
     z-index: 3
@@ -44,6 +32,7 @@
     width: 100%
     height: 100%
     object-fit: cover
+    object-position: top
 
   > .name
     font-size: 4rem
@@ -92,9 +81,6 @@
 
   &:focus
     outline: none
-
-    &:before
-      opacity: 0.6
 
     > .name
       margin-bottom: 1.5rem
