--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -25,7 +25,7 @@
     > .item
       display: block
       text-decoration: none
-      grid-row: span 16
+      grid-row: span 17
 
       > .astronaut-card
         width: 100%
@@ -59,15 +59,19 @@
 
         &:nth-child(2)
           grid-column: 2
-          grid-row: 4 / span 16
+          grid-row: 4 / span 17
 
         &:nth-child(3)
           grid-column: 3
           grid-row: 2 / span 23
 
+        &:nth-child(8)
+          grid-column: 3
+          grid-row: 40 / span 23
+
         &.-promotion
           grid-column: 3
-          grid-row: 25 / span 14
+          grid-row: 25 / span 15
 
     @media screen and (max-width: 1040px)
       grid-template-columns: repeat(2, 1fr)
