Add meta description

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ title Future Memories
 link(rel='icon' href='./favicon.ico')
 link(rel='stylesheet' href='./index.sass' inline)
 meta(name='viewport' content='width=device-width, initial-scale=1')
+meta(name='description' content='Future Memories is a digital studio where strategic design and technology unite into products of tomorrow.')
 
 +front-hero
 +team-block
