--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,8 @@ doctype html
 title Future Memories
 meta(name='viewport' content='width=device-width, initial-scale=1')
 meta(name='description' content='Future Memories is a digital studio where strategic design and technology unite into products of tomorrow.')
-link(rel='icon' href='./favicon.ico')
+meta(property='og:image' content='https://futurememories.netlify.com/ogimage.jpg')
+link(rel='icon' href='../static/favicon.ico')
 link(rel='stylesheet' href='./index.sass' inline)
 
 +front-hero
