Let team block fallback to flexbox if css grid not available

--- a/src/components/footer-block/footer-block.pug
+++ b/src/components/footer-block/footer-block.pug
@@ -1,5 +1,5 @@
 mixin footer-block
-  .footer-block
+  .footer-block#contact
     .inner
       img.logo(src='./images/logo-circle.svg', alt='Future Memories Logo')
 
