--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -16,16 +16,14 @@
     margin-bottom: 5rem
 
   > .grid
-    display: grid
-    grid-template-columns: repeat(3, 1fr)
-    grid-auto-rows: 1rem
-    grid-column-gap: 2rem
-    grid-row-gap: 2rem
+    display: flex
+    flex-wrap: wrap
 
     > .item
       display: block
       text-decoration: none
-      grid-row: span 17
+      width: (100% / 3)
+      height: 48rem
 
       > .astronaut-card
         width: 100%
@@ -49,42 +47,8 @@
           font-weight: bold
           text-transform: uppercase
 
-    @media screen and (min-width: 1041px)
-      > .item
-        &:nth-child(4)
-          grid-row: span 23
-
-        &:nth-child(8)
-          grid-row: span 20
-
-        &:nth-child(2)
-          grid-column: 2
-          grid-row: 4 / span 17
-
-        &:nth-child(3)
-          grid-column: 3
-          grid-row: 2 / span 23
-
-        &:nth-child(8)
-          grid-column: 3
-          grid-row: 40 / span 23
-
-        &.-promotion
-          grid-column: 3
-          grid-row: 25 / span 15
-
-    @media screen and (max-width: 1040px)
-      grid-template-columns: repeat(2, 1fr)
-
-      > .item
-        grid-row: span 12
-
-        &:nth-child(2), &:nth-child(4), &:nth-child(5)
-          grid-row: span 15
-
-        &.-promotion
-          grid-column: 2
-          grid-row: 16 / span 12
+      @media screen and (max-width: 1040px)
+        width: 50%
 
   @media screen and (max-width: $small-grid)
     padding-left: 0
@@ -102,14 +66,72 @@
       display: none
 
     > .grid
-      grid-auto-rows: 0.5rem
-      grid-column-gap: 1.5rem
-      grid-row-gap: 1.5rem
-
       > .item
+        height: 22rem
+
         &.-promotion
           padding: 1.5rem
 
           > .text
             font-size: 1.6rem
             line-height: 2rem
+
+  @supports(display: grid)
+    > .grid
+      display: grid
+      grid-template-columns: repeat(3, 1fr)
+      grid-auto-rows: 1rem
+      grid-column-gap: 2rem
+      grid-row-gap: 2rem
+
+      > .item
+        width: auto
+        height: auto
+        grid-row: span 17
+
+      @media screen and (min-width: 1041px)
+        > .item
+          &:nth-child(4)
+            grid-row: span 23
+
+          &:nth-child(8)
+            grid-row: span 20
+
+          &:nth-child(2)
+            grid-column: 2
+            grid-row: 4 / span 17
+
+          &:nth-child(3)
+            grid-column: 3
+            grid-row: 2 / span 23
+
+          &:nth-child(8)
+            grid-column: 3
+            grid-row: 40 / span 23
+
+          &.-promotion
+            grid-column: 3
+            grid-row: 25 / span 15
+
+      @media screen and (max-width: 1040px)
+        grid-template-columns: repeat(2, 1fr)
+
+        > .item
+          grid-row: span 12
+          width: auto
+
+          &:nth-child(2), &:nth-child(4), &:nth-child(5)
+            grid-row: span 15
+
+          &.-promotion
+            grid-column: 2
+            grid-row: 16 / span 12
+
+    @media screen and (max-width: $small-grid)
+      > .grid
+        grid-auto-rows: 0.5rem
+        grid-column-gap: 1.5rem
+        grid-row-gap: 1.5rem
+
+        > .item
+          height: auto
