Change team block <a> to <div>

--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -4,7 +4,7 @@ mixin team-block
     p.subheading A look under the hood
 
     .grid
-      a.item
+      .item
         +astronaut-card(
           'Andreas Kaltenbach',
           'Co-founder and COO. Full-stack developer and tech lead with over 12 years of experience.',
@@ -12,7 +12,7 @@ mixin team-block
         )
           img(src='./images/team/andreas.jpg' alt='Andreas Kaltenbach')
 
-      a.item
+      .item
         +astronaut-card(
           'Mikael Hellqvist',
           'Partner and CTO. 20 years of creating digital experiences, mostly iOS nowadays.',
@@ -20,7 +20,7 @@ mixin team-block
         )
           img(src='./images/team/mikael.jpg' alt='Mikael Hellqvist')
 
-      a.item
+      .item
         +astronaut-card(
           'Viktor Hesselbom',
           'Partner and Lead Web/Unity developer. Experienced frontend developer with the mindset of a technical artist.',
@@ -28,7 +28,7 @@ mixin team-block
         )
           img(src='./images/team/viktor.jpg' alt='Viktor Hesselbom' style='object-position:center')
 
-      a.item
+      .item
         +astronaut-card(
           'Pontus Börjesson',
           'Digital Designer in pursuit of creating engaging digital experiences, always keeping the user in mind.',
@@ -36,7 +36,7 @@ mixin team-block
         )
           img(src='./images/team/pontus.jpg' alt='Pontus Börjesson')
 
-      a.item
+      .item
         +astronaut-card(
           'Oskar Jönsson',
           'Mobile Developer in his mid-twenties with some years into iOS, Android and React Native.',
@@ -44,7 +44,7 @@ mixin team-block
         )
           img(src='./images/team/oskar.jpg' alt='Oskar Jönsson')
 
-      a.item
+      .item
         +astronaut-card(
           'Martin Egri',
           'Lead Backend Developer who has been building cloud-based services and platforms for more than six years.',
@@ -52,7 +52,7 @@ mixin team-block
         )
           img(src='./images/team/martin.jpg' alt='Martin Egri')
 
-      a.item
+      .item
         +astronaut-card(
           'Mattias Lundell',
           'Mobile developer with extensive experience in Android and iOS. Android is his platform of choice.',
@@ -60,7 +60,7 @@ mixin team-block
         )
           img(src='./images/team/mattias.jpg' alt='Mattias Lundell')
 
-      a.item
+      .item
         +astronaut-card(
           'P-A Gustafsson',
           'Co-founder and CEO. Over 17 years as product manager and designer across five industries.',
@@ -68,5 +68,5 @@ mixin team-block
         )
           img(src='./images/team/pa.jpg' alt='P-A Gustafsson')
 
-      a.item.-promotion
+      .item.-promotion
         span.text Come and work with us!
