--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -69,6 +69,9 @@
       line-height: 1.5
       margin-bottom: 1em
 
+      > a
+        color: inherit
+
       &:last-child
         margin-bottom: 0
 
