--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -1,7 +1,8 @@
 .team-block
   max-width: $max-width
-  padding: 5rem 3rem 0
-  margin: 0 auto 10rem
+  padding: 5rem 3rem
+  margin: 0 auto 5rem
+  overflow: hidden
 
   > .heading
     font-size: 4rem
@@ -53,7 +54,7 @@
   @media screen and (max-width: $small-grid)
     padding-left: 0
     padding-right: 0
-    margin-bottom: 5rem
+    margin-bottom: 0
 
     > .heading, > .subheading
       padding: 0 3rem
