--- a/src/components/astronaut-card/astronaut-card.sass
+++ b/src/components/astronaut-card/astronaut-card.sass
@@ -43,9 +43,11 @@
       left: 0
       z-index: 1
       width: 100%
-      height: 100%
       object-fit: cover
       object-position: top
+
+      @supports(object-fit: cover)
+        height: 100%
 
     > .name
       font-size: 4rem
