--- a/src/index.pug
+++ b/src/index.pug
@@ -18,5 +18,5 @@ body
   script(src='./index.js' async)
   script.
     if (navigator.serviceWorker && !navigator.serviceWorker.controller) {
-      navigator.serviceWorker.register('/serviceworker.js')
+      navigator.serviceWorker.register('/service-worker.js')
     }
