--- a/src/components/astronaut-card/astronaut-card.pug
+++ b/src/components/astronaut-card/astronaut-card.pug
@@ -1,5 +1,5 @@
 mixin astronaut-card(name, desc, phone)
-  article.astronaut-card(tabindex='1')
+  article.grid-card(tabindex='1')
     .card
       .shine
 
