--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -1,4 +1,6 @@
 include astronaut-card/astronaut-card.pug
+include case-block/case-block.pug
+include case-card/case-card.pug
 include footer-block/footer-block.pug
 include front-hero/front-hero.pug
 include nav-menu/nav-menu.pug
