--- a/src/components/nav-menu/nav-menu.pug
+++ b/src/components/nav-menu/nav-menu.pug
@@ -3,6 +3,7 @@ mixin nav-menu
     button.toggler
 
     ul.menu
-      //- li: a(href='#cases') Our cases
+      if INCLUDE_CASES
+        li: a(href='#cases') Our cases
       li: a(href='#team') The team
       li: a(href='#contact') Contact
