--- a/src/components/team-block/team-block.sass
+++ b/src/components/team-block/team-block.sass
@@ -1,93 +1,11 @@
 .team-block
-  max-width: $max-width
-  padding: 5rem 3rem
-  margin: 0 auto 5rem
-  overflow: hidden
-
-  > .heading
-    font-size: 4rem
-    font-weight: normal
-    text-transform: uppercase
-    color: $color-red
-    margin-bottom: 1rem
-
-  > .subheading
-    font-size: 3rem
-    color: white
-    margin-bottom: 5rem
-
-  > .grid
-    display: flex
-    flex-wrap: wrap
-
-    > .item
-      display: block
-      text-decoration: none
-      width: (100% / 3)
-      height: 48rem
-
-      > .astronaut-card
-        width: 100%
-        height: 100%
-
-      .no-touchevents &:hover
-        opacity: 1
-
-      &.-promotion
-        overflow: hidden
-        background: $color-red
-        color: white
-        padding: 3rem
-        display: flex
-        flex-direction: column
-        justify-content: flex-end
-
-        > .text
-          font-size: 4rem
-          line-height: 5rem
-          font-weight: bold
-          text-transform: uppercase
-
-      @media screen and (max-width: 1040px)
-        width: 50%
-
-  @media screen and (max-width: $small-grid)
-    padding-left: 0
-    padding-right: 0
-    margin-bottom: 0
-
-    > .heading, > .subheading
-      padding: 0 3rem
-
-    > .heading
-      font-size: 1.8rem
-      margin-bottom: 2rem
-
-    > .subheading
-      display: none
-
-    > .grid
-      > .item
-        height: 22rem
-
-        &.-promotion
-          padding: 1.5rem
-
-          > .text
-            font-size: 1.6rem
-            line-height: 2rem
-
   @supports(display: grid)
     > .grid
-      display: grid
       grid-template-columns: repeat(3, 1fr)
       grid-auto-rows: 1rem
-      grid-column-gap: 2rem
-      grid-row-gap: 2rem
+      grid-gap: 2rem
 
       > .item
-        width: auto
-        height: auto
         grid-row: span 17
 
       @media screen and (min-width: 1041px)
@@ -114,7 +32,7 @@
             grid-column: 3
             grid-row: 25 / span 15
 
-      @media screen and (max-width: 1040px)
+      @media screen and (max-width: $medium-grid)
         grid-template-columns: repeat(2, 1fr)
 
         > .item
@@ -128,11 +46,9 @@
             grid-column: 2
             grid-row: 16 / span 12
 
-    @media screen and (max-width: $small-grid)
-      > .grid
+      @media screen and (max-width: $small-grid)
         grid-auto-rows: 0.5rem
-        grid-column-gap: 1.5rem
-        grid-row-gap: 1.5rem
+        grid-gap: 1.5rem
 
         > .item
           height: auto
