--- a/src/components/front-hero/front-hero.pug
+++ b/src/components/front-hero/front-hero.pug
@@ -2,7 +2,7 @@ mixin front-hero
   .front-hero
     .inner
       .header
-        img(src='./images/logo-circle.svg', alt='Future Memories Logo')
+        img(src='./images/logo-circle.svg' alt='Future Memories Logo')
 
         +nav-menu
 
@@ -13,10 +13,10 @@ mixin front-hero
 
       .social
         a(href='https://www.facebook.com/futurememoriesab/')
-          img(src='./images/facebook.svg', alt='Facebook')
+          img(src='./images/facebook.svg' alt='Facebook')
 
         a(href='https://www.instagram.com/futurememoriesab/')
-          img(src='./images/instagram.svg', alt='Instagram')
+          img(src='./images/instagram.svg' alt='Instagram')
 
         a(href='https://www.linkedin.com/company/5100963/')
-          img(src='./images/linkedin.svg', alt='LinkedIn')
+          img(src='./images/linkedin.svg' alt='LinkedIn')
