--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -5,3 +5,4 @@ include footer-block/footer-block.pug
 include front-hero/front-hero.pug
 include nav-menu/nav-menu.pug
 include team-block/team-block.pug
+include error-block/error-block.pug
