--- a/src/components/error-block/error-block.pug
+++ b/src/components/error-block/error-block.pug
@@ -1,4 +1,6 @@
+- var rootUrl = '/'
+
 mixin error-block
   .error-block
-    img(src='./images/logo-circle.svg' alt='Future Memories Logo' width='100' height='100')
+    a(href=rootUrl): img(src='./images/logo-circle.svg' alt='Future Memories Logo' width='100' height='100')
     h1 Page not found
