--- a/src/components/error-block/error-block.sass
+++ b/src/components/error-block/error-block.sass
@@ -7,6 +7,7 @@
   color: white
   -webkit-font-smoothing: antialiased
 
-  > img
-    display: block
-    margin: 0 auto 3rem
+  > a
+    > img
+      display: block
+      margin: 0 auto 3rem
