Change error block margins to be cleaner

--- a/src/components/error-block/error-block.sass
+++ b/src/components/error-block/error-block.sass
@@ -8,6 +8,8 @@
   -webkit-font-smoothing: antialiased
 
   > a
+    display: inline-block
+    margin: 0 auto 3rem
+
     > img
       display: block
-      margin: 0 auto 3rem
