--- a/src/pages.pug
+++ b/src/pages.pug
@@ -1,3 +1,4 @@
 ul
-  li: a(href='./index.pug') index
   li: a(href='./404.pug') 404
+  li: a(href='./cases.pug') Cases
+  li: a(href='./index.pug') Homepage
