Move from parcel to webpack

--- a/src/components/case-block/case-block.pug
+++ b/src/components/case-block/case-block.pug
@@ -9,6 +9,7 @@ mixin case-block
       .item
         +case-card(
           'Nelly App',
+          './images/cases/nelly.jpg',
           'A digital shopping experience for iPhone and iPad enhanced with community features to share and discuss latest fashion trends.',
           'Nelly.com',
           'iOS',
@@ -16,25 +17,24 @@ mixin case-block
             { type: 'ios', url: 'https://itunes.apple.com/se/app/nelly/id1157319834' }
           ]
         )
-          img(src='./images/cases/nelly.jpg' alt='Nelly')
 
       .item
         +case-card(
           'Retts Plus',
+          './images/cases/retts-plus.jpg',
           'Lorem ipsum',
           'Predicare',
           'UI/UX'
         )
-          img(src='./images/cases/retts-plus.jpg' alt='Retts Plus')
 
       .item
         +case-card(
           'Driver App',
+          './images/cases/driver-app.jpg',
           'Lorem ipsum',
           'Mat.se',
           'iOS, UX/UI'
         )
-          img(src='./images/cases/driver-app.jpg' alt='Mat.se')
 
       a(href=caseUrl).item.-promotion
         span.text Se all cases & clients
