--- a/src/components/grid-card/grid-card.sass
+++ b/src/components/grid-card/grid-card.sass
@@ -46,6 +46,9 @@
       object-fit: cover
       object-position: top
 
+      &[alt="Viktor Hesselbom"]
+        object-position: center
+
       @supports(object-fit: cover)
         height: 100%
 
