--- a/src/components/team-block/team-block.pug
+++ b/src/components/team-block/team-block.pug
@@ -7,66 +7,66 @@ mixin team-block
       .item
         +astronaut-card(
           'Andreas Kaltenbach',
+          './images/team/andreas.jpg',
           'Co-founder and COO. Full-stack developer and tech lead with over 12 years of experience.',
           '+46 (0)735 201950'
         )
-          img(src='./images/team/andreas.jpg' alt='Andreas Kaltenbach')
 
       .item
         +astronaut-card(
           'Mikael Hellqvist',
+          './images/team/mikael.jpg',
           'Partner and CTO. 20 years of creating digital experiences, mostly iOS nowadays.',
           '+46 (0)723 411322'
         )
-          img(src='./images/team/mikael.jpg' alt='Mikael Hellqvist')
 
       .item
         +astronaut-card(
           'Viktor Hesselbom',
+          './images/team/viktor.jpg',
           'Partner and Lead Web/Unity developer. Experienced frontend developer with the mindset of a technical artist.',
           '+46 (0)732 628555'
         )
-          img(src='./images/team/viktor.jpg' alt='Viktor Hesselbom' style='object-position:center')
 
       .item
         +astronaut-card(
           'Pontus Börjesson',
+          './images/team/pontus.jpg',
           'Digital Designer in pursuit of creating engaging digital experiences, always keeping the user in mind.',
           '+46 (0)707 959011'
         )
-          img(src='./images/team/pontus.jpg' alt='Pontus Börjesson')
 
       .item
         +astronaut-card(
           'Oskar Jönsson',
+          './images/team/oskar.jpg',
           'Mobile Developer in his mid-twenties with some years into iOS, Android and React Native.',
           '+46 (0)722 536161'
         )
-          img(src='./images/team/oskar.jpg' alt='Oskar Jönsson')
 
       .item
         +astronaut-card(
           'Martin Egri',
+          './images/team/martin.jpg',
           'Lead Backend Developer who has been building cloud-based services and platforms for more than six years.',
           '+46 (0)763 490500'
         )
-          img(src='./images/team/martin.jpg' alt='Martin Egri')
 
       .item
         +astronaut-card(
           'Mattias Lundell',
+          './images/team/mattias.jpg',
           'Mobile developer with extensive experience in Android and iOS. Android is his platform of choice.',
           '+46 (0)705 905595'
         )
-          img(src='./images/team/mattias.jpg' alt='Mattias Lundell')
 
       .item
         +astronaut-card(
           'P-A Gustafsson',
+          './images/team/pa.jpg',
           'Co-founder and CEO. Over 17 years as product manager and designer across five industries.',
           '+46 (0)760 338822'
         )
-          img(src='./images/team/pa.jpg' alt='P-A Gustafsson')
 
       a(href='mailto:hello@futurememories.se').item.-promotion
         span.text Come and work with us!
