--- a/src/components/astronaut-card/astronaut-card.pug
+++ b/src/components/astronaut-card/astronaut-card.pug
@@ -1,10 +1,9 @@
-mixin astronaut-card(name, desc, phone)
+mixin astronaut-card(name, image, desc, phone)
   article.grid-card(tabindex='1')
     .card
       .shine
 
-      //- Send image as block because of bug: https://github.com/Ty3uK/parcel-plugin-pug/issues/1
-      block
+      img(src=image alt=name)
 
       h3.name= name
 
