--- a/src/components/case-card/case-card.pug
+++ b/src/components/case-card/case-card.pug
@@ -1,10 +1,9 @@
-mixin case-card(name, desc, client, type, actions)
+mixin case-card(name, image, desc, client, type, actions)
   article.grid-card(tabindex='1')
     .card
       .shine
 
-      //- Send image as block because of bug: https://github.com/Ty3uK/parcel-plugin-pug/issues/1
-      block
+      img(src=image alt=name)
 
       h3.name.-large= name
 
