--- a/src/_base.pug
+++ b/src/_base.pug
@@ -10,7 +10,7 @@ head
   meta(property='og:image' content='https://futurememories.se/ogimage.jpg')
   meta(property='og:image:width' content='1200')
   meta(property='og:image:height' content='630')
-  link(rel='stylesheet' href='style.css' inline)
+  link(rel='stylesheet' href='/style.css')
 body
   block content
 
