Adding copy for cases on front page

--- a/src/components/case-block/case-block.pug
+++ b/src/components/case-block/case-block.pug
@@ -8,9 +8,9 @@ mixin case-block
     .grid
       .item
         +case-card(
-          'Nelly App',
+          'Nelly Shopping App',
           'A digital shopping experience for iPhone and iPad enhanced with community features to share and discuss latest fashion trends.',
-          'Nelly.com',
+          'NLY Scandinavia',
           'iOS',
           [
             { type: 'ios', url: 'https://itunes.apple.com/se/app/nelly/id1157319834' }
@@ -21,7 +21,7 @@ mixin case-block
       .item
         +case-card(
           'Retts Plus',
-          'Lorem ipsum',
+          'Saving lives by supporting emergency personnel in critical decision-making during medical emergency situations.',
           'Predicare',
           'UI/UX'
         )
@@ -29,8 +29,8 @@ mixin case-block
 
       .item
         +case-card(
-          'Driver App',
-          'Lorem ipsum',
+          'Mat.se Driver App',
+          'On-time front door grocery deliveries through real-time positioning and waypoint-to-waypoint navigation.',
           'Mat.se',
           'iOS, UX/UI'
         )
