--- a/src/components/case-block/case-block.pug
+++ b/src/components/case-block/case-block.pug
@@ -1,5 +1,3 @@
-- var caseUrl = '/cases'
-
 mixin case-block
   section#cases.case-block.grid-block
     h2.heading Selected Projects
@@ -36,6 +34,6 @@ mixin case-block
           'iOS, UX/UI'
         )
 
-      a(href=caseUrl).item.-promotion
+      a(href='/cases').item.-promotion
         span.text Se all cases & clients
         .right-arrow
