--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -2,7 +2,7 @@ include astronaut-card/astronaut-card.pug
 include case-block/case-block.pug
 include case-card/case-card.pug
 include footer-block/footer-block.pug
-include front-hero/front-hero.pug
+include header-hero/header-hero.pug
 include nav-menu/nav-menu.pug
 include team-block/team-block.pug
 include error-block/error-block.pug
