--- a/src/components/nav-menu/nav-menu.pug
+++ b/src/components/nav-menu/nav-menu.pug
@@ -4,6 +4,6 @@ mixin nav-menu
 
     ul.menu
       if INCLUDE_CASES
-        li: a(href='#cases') Our cases
-      li: a(href='#team') The team
-      li: a(href='#contact') Contact
+        li: a(href='/#cases') Our cases
+      li: a(href='/#team') The team
+      li: a(href='/#contact') Contact
