--- a/src/components/header-hero/header-hero.sass
+++ b/src/components/header-hero/header-hero.sass
@@ -14,6 +14,10 @@
       display: flex
       justify-content: space-between
 
+      > a
+        display: inline-block
+        font-size: 0
+
     > .content
       flex: 1
       display: flex
